--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="" alt="">
+        <img src="favicon_io/favicon-32x32.png" alt="">
         <menu>
             <ul>
                 <li><a href="#">Início</a></li>
@@ -23,7 +23,7 @@
 
         </div>
         <div>
-            
+
         </div>
         
     </body>
